2017-11-02  Thilo Graf  <dbt@novatux.de>

	version 0.2.0-generic-pc
	for generic-pc

	version 1.0.0-mpx
	hd51 support

	adjust .gitignore for untracked files

	add default files

	add update script

2017-08-23  Jacek Jendrzej  <satbaby@kawaii.com>

	return current_video_system

2017-06-18  Jacek Jendrzej  <satbaby@kawaii.com>

	add GetVideoSystem()

2017-06-15  Jacek Jendrzej  <satbaby@kawaii.com>

	fix compil

2017-04-15  Jacek Jendrzej  <satbaby@kawaii.com>

	fix KEY_STOP typo

2017-03-22  Jacek Jendrzej  <satbaby@kawaii.com>

	fix error with empty video buffer

	fix scale screenshot with clutterfb

	supplement to 85819d69eed2de0189f5f656039328bd2b77b907, fix2

2017-03-21  svenhoefer  <svenhoefer@svenhoefer.com>

	Merge remote-tracking branch 'neutrino-mp/master'

2017-03-20  svenhoefer  <svenhoefer@svenhoefer.com>

	- generic-pc/clutterfb.cpp: fix my stupid c/p error :/

	- generic-pc: add some more and change some existing keys; ...
	I've tried to keep the functions on the right keys. 'r' for Radio,
	't' for TV and so on.

2017-03-20  Jacek Jendrzej  <satbaby@kawaii.com>

	generic-pc/video.cpp dont set output format with negative height size

2017-03-19  Stefan Seyfried  <seife@tuxbox-git.slipkontur.de>

	libtriple: fix hw_caps build

2017-03-19  svenhoefer  <svenhoefer@svenhoefer.com>

	- .gitignore: add compile

2017-03-18  Jacek Jendrzej  <satbaby@kawaii.com>

	fix error handling in swscale

2017-03-17  svenhoefer  <svenhoefer@svenhoefer.com>

	- generic-pc/audio.cpp: add default-section to c->codec_id switch ...
	to avoid compiler warnings

2017-03-16  Jacek Jendrzej  <satbaby@kawaii.com>

	check if av_image_fill_arrays return error

2017-03-15  Stefan Seyfried  <seife+github@b1-systems.com>

	Merge pull request #1 from tuxbox-neutrino/master
	Some fixes by Jacek. :)

2017-03-15  Jacek Jendrzej  <satbaby@kawaii.com>

	add GetScreenImage to cVideo

2017-03-14  Jacek Jendrzej  <satbaby@kawaii.com>

	fix audio video rate info
