@@ -46,7 +46,7 @@ public:
 	int Stop(bool blank = true);
 	int SetStreamType(VIDEO_FORMAT type);
 	void SetSyncMode(AVSYNC_TYPE mode);
-	void ShowPicture(const char * fname);
+	bool ShowPicture(const char * fname);
 	void Standby(unsigned int bOn);
 
 	/* used internally by dmx */
