@@ -1,3 +1,7 @@
+2018-01-12 GetAway1 <get-away@t-online.de>
+
+	ShowPicture: return boolean expression
+
 2017-11-02  Thilo Graf  <dbt@novatux.de>
 
 	version 0.2.0-generic-pc
